--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section{
 
 header{
     position: fixed;
-    top:0; right:0;
+    top:0; 
     min-height: 100vh;
     display: inline-flex;
     align-items: center;
